<resources>
    <string name="app_name">Safe Charging</string>
    <string name="label_info">Battery Information :</string>
    <string name="label_option">Stop Charging When Conditions :</string>
    <string name="sw_usb">USB Source (not AC Charger)</string>
    <string name="sw_usb_custom">USB Source</string>
    <string name="sw_usb_disable">Always Stop Charging!</string>
    <string name="sw_battfull">Stop Charging on Battery Full!\nIgnore Maximum Level</string>
    <string name="sw_battfull_label">Battery Full</string>
    <string name="sw_overlevel">Battery Level > 90%</string>
    <string name="sw_overlevel_custom">Battery Level</string>
    <string name="sw_overall">Battery Over Voltage or Over Heat</string>
    <string name="label_option1">Click to change max level or battery full</string>
    <string name="label_option2">Click to change min, max level, and others</string>
    <string name="label_level">Level</string>
    <string name="label_health">Health</string>
    <string name="label_status">Status</string>
    <string name="label_titikdua">:</string>
    <string name="label_titiktitik">. . .</string>
    <string name="label_max">Max Level :</string>
    <string name="label_maximum">Maximum Level :</string>
    <string name="label_min">Min Level :</string>
    <string name="label_zero">0</string>
    <string name="label_persen">%</string>
    <string name="label_zeropersen">0%</string>
    <string name="label_service">Service</string>
    <string name="label_monitor">Monitoring</string>
    <string name="label_notrunning">Not Running</string>
    <string name="label_notsupported">Not Supported</string>
    <string name="button">Re-Start Service</string>
    <string name="button_enable">Enable</string>
    <string name="button_disable">Disable</string>
    <string name="action_restart">Re&#8211;Start Service</string>
    <string name="action_reset">Kill Service &amp; Reset</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="toast_nomonitor">No Conditions are Monitored!</string>
    <string name="toast_monitor">SafeCharging: Monitor is Started!</string>
    <string name="toast_reset">SafeCharging: Reset Charging!</string>
    <string name="notif_maxlevel">Max Level &#8212; Stop Charging!</string>
    <string name="notif_battfull">Battery Full &#8212; Stop Charging!</string>
    <string name="notif_minlevel">Below Min Level&#8230;</string>
    <string name="notif_replug">Re-plug to start charging again&#8230;</string>
    <string name="notif_usbmax">if Min Level is reached it will charging again&#8230;</string>
    <string name="notif_usb_disable">USB Source is forbidden!</string>
    <string name="notif_startcharging">Start Charging&#8230;</string>
    <string name="notif_stopcharging">Stop Charging!</string>
    <string name="notif_startmonitor">Monitor is Started!</string>
    <string name="notif_healthgood">Battery Health is Good again!</string>
    <string name="about">Satu lagi project hasil menjiplak ide dari sebuah trit xda. Dimana aplikasi ini berfungsi untuk menghentikan arus charging, bila memenuhi suatu kondisi tertentu. Mohon maaf bila ada typo maupun &#8230; ah syudah lah.</string>
    <string name="website">Website http://harimurti.net</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="close">Close</string>
    <string name="visit">Visit</string>
</resources>
