<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="net.harimurti.safecharging.activity.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_side_margin"
        android:paddingRight="@dimen/activity_side_margin"
        android:fontFamily="sans-serif"
        android:text="@string/label_info"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#737373" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/label_level" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_space_margin"
            android:paddingRight="@dimen/activity_space_margin"
            android:text="@string/label_titikdua" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_zero" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/label_persen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/label_health" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_space_margin"
            android:paddingRight="@dimen/activity_space_margin"
            android:text="@string/label_titikdua" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_titiktitik" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/label_status" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_space_margin"
            android:paddingRight="@dimen/activity_space_margin"
            android:text="@string/label_titikdua" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_titiktitik" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/label_service" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_space_margin"
            android:paddingRight="@dimen/activity_space_margin"
            android:text="@string/label_titikdua" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_titiktitik" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="@dimen/activity_side_margin"
        android:paddingRight="@dimen/activity_side_margin"
        android:fontFamily="sans-serif"
        android:text="@string/label_option"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#737373" />

    <Switch
        android:text="@string/sw_overlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:textColor="?android:attr/textColorTertiary"
        android:id="@+id/switch1" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_side_sub_margin"
        android:layout_marginEnd="@dimen/activity_side_sub_margin"
        android:layout_marginTop="20dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#737373" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:text="@string/sw_usb"
        android:textColor="?android:attr/textColorTertiary" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_side_sub_margin"
        android:layout_marginEnd="@dimen/activity_side_sub_margin"
        android:layout_marginTop="20dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#737373" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_side_sub_margin"
        android:paddingRight="@dimen/activity_side_sub_margin"
        android:text="@string/sw_overall"
        android:textColor="?android:attr/textColorTertiary" />

</LinearLayout>
